--- a/requirements.yml
+++ b/requirements.yml
@@ -22,4 +22,4 @@ implicit:
   - возможность сбросить решение
   - получение достижений
   - создание турниров
-  - можно создать новуб задачу
+  - можно создать новую задачу
