--- a/requirements.yml
+++ b/requirements.yml
@@ -6,6 +6,7 @@ functional:
   - Можно выбрать сложность задачи
   - Выбрать определенную задачу или наугад
   - Следить за ходом решения
+  - Создать турнир
   - Можно общаться зарегистрированными пользователями
   - Просмотр завершенных игр
   - Просмотр рейтинга (за неделю/месяц/всё время)
@@ -21,5 +22,4 @@ implicit:
   - возможность сдаться
   - возможность сбросить решение
   - получение достижений
-  - создание турниров
   - можно создать новую задачу
