--- a/test-cases.yml
+++ b/test-cases.yml
@@ -133,6 +133,25 @@
     Открылась задача против бота
 
 - summary: |
+    Успешное создание игры с другим пользователем
+  requirement: |
+    При нажатии на кнопку "Create a game" можно выбрать "With other user", любой режим игры и начать играть
+  prerequisites: |
+    - пользователь должен быть авторизован
+  test-data: |
+    no test-data
+  steps:
+    - Нажать кнопку "Create a game"
+    - В открывшемся окне выбрать желаемый уровень сложности
+    - Тип игры выбрать "With other user"
+    - Время установить любое
+    - задачу выбрать любую
+    - Нажимаем кнопку «Create battle»
+  expected-result: |
+    На главной странице во вкладке "LOBBY" появилось приграшение к игре
+    При нажатии на кнопку "Continue" можно скопировать ссылку игры или отменить игру
+
+- summary: |
     Проверить возможнось слежения за ходом игры других игроков
   requirement: |
     При нажалии в лобби кнопки "Show" напротив существующей игры откроется слежение на ходом игры
@@ -256,16 +275,120 @@
     Создался новый турнир
 
 - summary: |
-
+    Успешный просмотр собственной статистики и истории битв
   requirement: |
-
+    При нажатии на кнопку "STATISTICS" можно просматривать статистику
+    При нажатии на кнопку "COMPLETED GAMES" можно просматривать краткий список собственных битв
   prerequisites: |
-    -
+    - пользователь должен быть авторизован
   test-data: |
     no test-data
   steps:
-    -
+    - нажать на иконку пользователя
+    - во всплывающем меню выбрать пункт "My profile"
+    - Переходим в раздел "COMPLETED GAMES"
   expected-result: |
+    При привходе в проофиль открыт раздел "STATISTICS" и можно просматривать статистику
+    При нажатии на кнопку "COMPLETED GAMES" можно просматривать список собственных битв
+
+- summary: |
+    Успешное изменение Nickname в настройках пользователя
+  requirement: |
+    При нажатии на кнопку "Settings" можно изменить Nickname в настройках пользователя
+  prerequisites: |
+    - пользователь должен быть авторизован
+  test-data: |
+    no test-data
+  steps:
+    - нажать на иконку пользователя
+    - во всплывающем меню выбрать пункт "Settings"
+    - поменять Nickname
+    - нажать на кнопку "Save"
+  expected-result: |
+    Высветилось оповещание "Your settings has been changed" и изменения успешно сохранились
+
+- summary: |
+    Успешное изменение Оружия в настройках пользователя
+  requirement: |
+    В меню "Settings" можно изменить Оружие
+  prerequisites: |
+    - пользователь должен быть авторизован
+  test-data: |
+    no test-data
+  steps:
+    - нажать на иконку пользователя
+    - во всплывающем меню выбрать пункт "Settings"
+    - выбрать любое Оружие из списка
+    - нажать на кнопку "Save"
+  expected-result: |
+    Высветилось оповещание "Your settings has been changed" и изменения успешно сохранились
+
+- summary: |
+    Проверка успешного изменения звука в настройках пользователя
+  requirement: |
+    В меню "Settings" можно изменить настройки звука
+  prerequisites: |
+    - пользователь должен быть авторизован
+  test-data: |
+    no test-data
+  steps:
+    - нажать на иконку пользователя
+    - во всплывающем меню выбрать пункт "Settings"
+    - выбираем каждый тип звука из списка по очереди
+    - выбирать уровень громкости
+    - нажать на кнопку "Save"
+  expected-result: |
+    После изменения настроек высветилось оповещение "Your settings has been changed" и изменения успешно сохранились
+
+- summary: |
+    Проверка успешного просмотра задач на сайте
+  requirement: |
+    При нажатии на кнопку "Tasks" можно увидеть список задач, нажав на кнопку "Show" можно просмотреть информацию о задаче
+  prerequisites: |
+    - пользователь должен быть авторизован
+  test-data: |
+    no test-data
+  steps:
+    - нажать на иконку пользователя
+    - во всплывающем меню выбрать пункт "Tasks"
+    - напротив любой задачи нажать "Show"
+  expected-result: |
+    Открылось условие задачи
+
+- summary: |
+    Проверка успешного создания новой задачи на сайте
+  requirement: |
+    При нажатии на кнопку "Tasks" далее "Create new tasks" можно создать новую задачу
+  prerequisites: |
+    - пользователь должен быть авторизован
+  test-data: |
+    no test-data
+  steps:
+    - нажать на иконку пользователя
+    - во всплывающем меню выбрать пункт "Tasks"
+    - нажать на кнопку "Create new tasks"
+    - ввести условия задачи
+    - нажать на кнопку "Save"
+  expected-result: |
+    Задача создана
+
+- summary: |
+    Проверка успешного создания нового пакета задач на сайте
+  requirement: |
+    При нажатии на кнопку "Tasks" далее "Tasks packs" создается свой пакет задач
+  prerequisites: |
+    - пользователь должен быть авторизован
+  test-data: |
+    no test-data
+  steps:
+    - нажать на иконку пользователя
+    - во всплывающем меню выбрать пункт "Tasks"
+    - нажать на кнопку "Tasks packs"
+    - нажать на кнопку "Create new tasks pack"
+    - заполнить форму
+    - нажать на кнопку "Save"
+  expected-result: |
+    Пакет задач создался
 
 # негативные тесты
 
@@ -290,13 +413,15 @@
     Регистация не возможна
 
 - summary: |
-
+    Проверка не возможности регистрации с пустыми полями
   requirement: |
-
+    При оставлении полей пустыми и нажатия кнопки "Submit" регистрация не происходит
   prerequisites: |
-    -
+    no prerequisites
   test-data: |
     no test-data
   steps:
-    -
+    - нажать кнопку "Sign up"
+    - нажать кнопку "Submit"
   expected-result: |
+    Регистрация не возможна, поля долны быть заполнены
