fix: change status

--- a/testing-report.yml
+++ b/testing-report.yml
@@ -36,6 +36,10 @@
   status: pass
 
 - summary: |
+    Успешное создание игры с другом
+  status: pass
+
+- summary: |
     Проверить возможнось слежения за ходом игры других игроков
   status: pass
 
@@ -85,7 +89,7 @@
 
 - summary: |
     Проверка успешного изменения звука в настройках пользователя
-  status: pass
+  status: fail
 
 - summary: |
     Проверка успешного просмотра задач на сайте
