feat: add new test-case

--- a/test-cases.yml
+++ b/test-cases.yml
@@ -152,6 +152,26 @@
     При нажатии на кнопку "Continue" можно скопировать ссылку игры или отменить игру
 
 - summary: |
+    Успешное создание игры с другом
+  requirement: |
+    При нажатии на кнопку "Create a game" можно выбрать "With a friend", любой режим игры и начать играть
+  prerequisites: |
+    - пользователь должен быть авторизован
+  test-data: |
+    - аккаунт Github
+    - второй аккаунт email - lara.medeiros373@flounderfantasy.com, пароль - K_pdcHQ2yjK7VgF
+  steps:
+    - Нажать кнопку "Create a game"
+    - В открывшемся окне выбрать желаемый уровень сложности
+    - Тип игры выбрать "With a friend"
+    - Время установить любое
+    - выбрать противника - lara373
+    - задачу выбрать любую
+    - Нажимаем кнопку «Create invite»
+  expected-result: |
+    На аккаунт lara373 пришло приглашение к игре. Игру можно принять (Accept) и отклонить (Decline).
+
+- summary: |
     Проверить возможнось слежения за ходом игры других игроков
   requirement: |
     При нажалии в лобби кнопки "Show" напротив существующей игры откроется слежение на ходом игры
