add new test-cases

--- a/test-cases.yml
+++ b/test-cases.yml
@@ -344,6 +344,40 @@
     Высветилось оповещание "Your settings has been changed" и изменения успешно сохранились
 
 - summary: |
+    Успешное добавление названия клана в настройках пользователя
+  requirement: |
+    В меню "Settings" можно добавить название клана
+  prerequisites: |
+    - пользователь должен быть авторизован
+  test-data: |
+    no test-data
+  steps:
+    - нажать на иконку пользователя
+    - во всплывающем меню выбрать пункт "Settings"
+    - набрать любое название в строке "Your clan"
+    - нажать на кнопку "Save"
+  expected-result: |
+    Высветилось оповещание "Your settings has been changed" и название клана успешно сохранилось
+
+- summary: |
+    Успешное удаление названия клана в настройках пользователя
+  requirement: |
+    В меню "Settings" можно удалить название клана
+  prerequisites: |
+    - пользователь должен быть авторизован
+    - добавлено название клана
+  test-data: |
+    no test-data
+  steps:
+    - нажать на иконку пользователя
+    - во всплывающем меню выбрать пункт "Settings"
+    - очистить строку "Your clan"
+    - нажать на кнопку "Save"
+    - обновить страницу
+  expected-result: |
+    Высветилось оповещание "Your settings has been changed" и название клана удалено
+
+- summary: |
     Проверка успешного изменения звука в настройках пользователя
   requirement: |
     В меню "Settings" можно изменить настройки звука
@@ -354,9 +388,10 @@
   steps:
     - нажать на иконку пользователя
     - во всплывающем меню выбрать пункт "Settings"
-    - выбираем каждый тип звука из списка по очереди
+    - выбираем пункт "Standart"
     - выбирать уровень громкости
     - нажать на кнопку "Save"
+    - обновить страницу
   expected-result: |
     После изменения настроек высветилось оповещение "Your settings has been changed" и изменения успешно сохранились
 
@@ -445,3 +480,17 @@
     - нажать кнопку "Submit"
   expected-result: |
     Регистрация не возможна, поля долны быть заполнены
+
+- summary: |
+    Проверка лимита знаков при отправке сообщения в чат
+  requirement: |
+    При наборе бесконечного сообщения в чат отправлка не возможна
+  prerequisites: |
+    - пользователь должен быть авторизован
+  test-data: |
+    no test-data
+  steps:
+    - набрать соббщение из любых знаков размером, например более 500 символов
+    - нажать кнопку "Send"
+  expected-result: |
+    Сообщение перестало набираться после лимита сообщений
