add new testing reports

--- a/testing-report.yml
+++ b/testing-report.yml
@@ -88,6 +88,14 @@
   status: pass
 
 - summary: |
+    Успешное добавление названия клана в настройках пользователя
+  status: pass
+
+- summary: |
+    Успешное удаление названия клана в настройках пользователя
+  status: fail
+
+- summary: |
     Проверка успешного изменения звука в настройках пользователя
   status: fail
 
@@ -112,3 +120,7 @@
 - summary: |
     Проверка не возможности регистрации с пустыми полями
   status: pass
+
+- summary: |
+    Проверка лимита знаков при отправке сообщения в чат
+  status: fail
