fix: change test case about chat

--- a/test-cases.yml
+++ b/test-cases.yml
@@ -493,4 +493,4 @@
     - набрать соббщение из любых знаков размером, например более 500 символов
     - нажать кнопку "Send"
   expected-result: |
-    Сообщение перестало набираться после лимита сообщений
+    Отправить бесконечное сообщение не возможно. ПОявлется сообщение "Message length cannot exceed 1024 characters."
