--- a/issues.yml
+++ b/issues.yml
@@ -1,3 +1,4 @@
 ---
 issues:
   - url: "https://github.com/hexlet-codebattle/codebattle/issues/1784#issuecomment-2156089610"
+  - url: "https://github.com/hexlet-codebattle/codebattle/issues/1777#issuecomment-2156103078"
