fix: fix test cases

--- a/test-cases.yml
+++ b/test-cases.yml
@@ -1,87 +1,51 @@
 ---
 - summary: |
-    Попробовать простую игру без регистрации
+    Проверка создания игры без регистрации
   requirement: |
     При нажатии кнопки "TRY SIMPLE" открывается интерфейс с задачей против бота
   prerequisites: |
-    no prerequisites
+    Пользователь не зарегестирован
   test-data: |
     no test-data
   steps:
     - Нажимем кнопку "TRY SIMPLE"
   expected-result: |
-    Открылась задача против бота
+    Игра без регистрации успешно создана
 
 - summary: |
-    Проверка регистации через GitHub
+    Проверка успешной авторизации через GitHub
   requirement: |
     При вводе правильного логина и пароля аккаунта GitHub происходит вход в систему
   prerequisites: |
-    Пользователь должен иметь аккаунт на GitHub
+    - Пользователь должен иметь аккаунт GitHub
+    - Пользователь вошел в свой аккаунт GitHub
   test-data: |
     no test-data
   steps:
     - нажать кнопку "Sign up"
     - нажать кнопку "Sign in with Github"
-    - Вводим логин
-    - Вводим пароль
     - Нажать кнопку "Sign in"
   expected-result: |
-    Открылась страница лобби
+    Пользователь успешно авторизован через GitHub
 
 - summary: |
-    Проверка авторизации через GitHub
-  requirement: |
-    При вводе правильного логина и пароля аккаунта GitHub происходит вход в систему
-  prerequisites: |
-    Пользователь должен иметь аккаунт на GitHub
-  test-data: |
-    no test-data
-  steps:
-    - нажать кнопку "Sign in"
-    - нажать кнопку "Sign in with Github"
-    - Вводим логин
-    - Вводим пароль
-    - Нажать кнопку "Sign in"
-  expected-result: |
-    Открылась страница лобби
-
-- summary: |
-    Проверка регистации через Discord
+    Проверка успешной авторизации через Discord
   requirement: |
     При вводе правильного логина и пароля аккаунта Discord происходит вход в систему
   prerequisites: |
-    Пользователь должен иметь аккаунт на Discord
+    - Пользователь должен иметь аккаунт Discord
+    - Пользователь вошел в свой аккаунт Discord
   test-data: |
     no test-data
   steps:
     - нажать кнопку "Sign up"
     - нажать кнопку "Sign in with Discord"
-    - Вводим логин
-    - Вводим пароль
     - Нажать кнопку "Authorize"
   expected-result: |
-    Открылась страница лобби
+    Пользователь успешно авторизован через Discord
 
 - summary: |
-    Проверка авторизации через Discord
-  requirement: |
-    При вводе правильного логина и пароля аккаунта Discord происходит вход в систему
-  prerequisites: |
-    Пользователь должен иметь аккаунт на GitHub
-  test-data: |
-    no test-data
-  steps:
-    - нажать кнопку "Sign in"
-    - нажать кнопку "Sign in with Discord"
-    - Вводим логин
-    - Вводим пароль
-    - Нажать кнопку "Authorize"
-  expected-result: |
-    Открылась страница лобби
-
-- summary: |
-    Проверка регистации с помощью корректных Nickname и email
+    Проверка успешной регистрации
   requirement: |
     При корректном заполнении формы регистрации происходит вход в систему
   prerequisites: |
@@ -90,32 +54,33 @@
     no test-data
   steps:
     - нажать кнопку "Sign up"
-    - вводим Nickname - lara373
-    - Вводим email - lara.medeiros373@flounderfantasy.com
-    - Вводим пароль - K_pdcHQ2yjK7VgF
+    - вводим Nickname
+    - Вводим email
+    - Вводим пароль
     - вводим пароль повторно
     - Нажать кнопку "Submit"
   expected-result: |
-    Открылась страница лобби
+    Пользователь успешно авторизован
 
 - summary: |
-    Проверка авторизации с помощью правильных Nickname и email
+    Проверка успешной авторизации
   requirement: |
     При вводе правильного email и пароля происходит вход в систему
   prerequisites: |
     Пользователь ранее должен зарегестироваться
   test-data: |
-    no test-data
+    - email - lara.medeiros373@flounderfantasy.com
+    - пароль - K_pdcHQ2yjK7VgF
   steps:
     - нажать кнопку "Sign in"
-    - Вводим email - lara.medeiros373@flounderfantasy.com
-    - Вводим пароль - K_pdcHQ2yjK7VgF
+    - Вводим email
+    - Вводим пароль
     - Нажать кнопку "Submit"
   expected-result: |
-    Открылась страница лобби
+    Пользователь успешно авторизован
 
 - summary: |
-    Проверка создания простой игры против бота
+    Проверка создания игры с ботом
   requirement: |
     При нажатии кнопки "Create a game" и выборе параметров должна открыться игра
   prerequisites: |
@@ -130,10 +95,10 @@
     - задачу выбрать любую
     - Нажимаем кнопку «Create battle»
   expected-result: |
-    Открылась задача против бота
+    Игра с ботом успешно создана
 
 - summary: |
-    Успешное создание игры с другим пользователем
+    Проверка отображения игры в списке лобби
   requirement: |
     При нажатии на кнопку "Create a game" можно выбрать "With other user", любой режим игры и начать играть
   prerequisites: |
@@ -148,15 +113,15 @@
     - задачу выбрать любую
     - Нажимаем кнопку «Create battle»
   expected-result: |
-    На главной странице во вкладке "LOBBY" появилось приграшение к игре
-    При нажатии на кнопку "Continue" можно скопировать ссылку игры или отменить игру
+    Созданная игра отображается в списке лобби
 
 - summary: |
-    Успешное создание игры с другом
+    Проверка создания игры с другом
   requirement: |
     При нажатии на кнопку "Create a game" можно выбрать "With a friend", любой режим игры и начать играть
   prerequisites: |
     - пользователь должен быть авторизован
+    - второй пользователь должен быть авторизован в другом браузере
   test-data: |
     - аккаунт Github
     - второй аккаунт email - lara.medeiros373@flounderfantasy.com, пароль - K_pdcHQ2yjK7VgF
@@ -168,24 +133,25 @@
     - выбрать противника - lara373
     - задачу выбрать любую
     - Нажимаем кнопку «Create invite»
+    - второй пользователь нажимает кнопку "Accept"
   expected-result: |
-    На аккаунт lara373 пришло приглашение к игре. Игру можно принять (Accept) и отклонить (Decline).
+    Игра с другом успешно создана
 
 - summary: |
-    Проверить возможнось слежения за ходом игры других игроков
+    Проверка просмотра активной игры
   requirement: |
-    При нажалии в лобби кнопки "Show" напротив существующей игры откроется слежение на ходом игры
+    При нажатии в лобби кнопки "Show" напротив существующей игры откроется слежение на ходом игры
   prerequisites: |
     - пользователь должен быть авторизован
   test-data: |
     no test-data
   steps:
-    - Нажать кнопку "Show"
+    - Нажать кнопку "Show" в разделе "Lobby"
   expected-result: |
-    Открылся интерфейс слежения за ходом игры
+    Пользователь добавлен как наблюдатель
 
 - summary: |
-    Проверка возможности отправки сообщений в чат
+    Проверка отправки сообщения в чат с главной
   requirement: |
     После набора сообщения и нажатия кнопки "Send" данное сообщение появляется в чате
   prerequisites: |
@@ -199,7 +165,7 @@
     Сообщение появилось в чате
 
 - summary: |
-    Проверка возможности просмотра списка истории завершенных игр
+    Проверка просмотра списка истории завершенных игр
   requirement: |
     При нажатии меню "History" открывается список завершенных игр
   prerequisites: |
@@ -212,7 +178,7 @@
     Открылся список завершенных игр
 
 - summary: |
-    Проверка возможности просмотра результатов завершенной игры
+    Проверка просмотра результатов завершенной игры
   requirement: |
     При нажатии кнопки "Show" открывается страница с результатами игры
   prerequisites: |
@@ -227,7 +193,7 @@
     открыласть страница с результатами игры
 
 - summary: |
-    Проверка возможности просмотра таблицы лидеров за неделю
+    Проверка просмотра таблицы лидеров за неделю
   requirement: |
     При авторизации в LEADERBOARD по умолчанию открыта вкладка "Week"
   prerequisites: |
@@ -240,7 +206,7 @@
     В LEADERBOARD открыта вкладка "Week"
 
 - summary: |
-    Проверка возможности просмотра таблицы лидеров за месяц
+    Проверка просмотра таблицы лидеров за месяц
   requirement: |
     При выборе вкладки "Month" в LEADERBOARD открывается таблица лидеров за месяц
   prerequisites: |
@@ -253,7 +219,7 @@
     Открылась таблица лидеров за месяц
 
 - summary: |
-    Проверка возможности просмотра таблицы лидеров за все время
+    Проверка просмотра таблицы лидеров за все время
   requirement: |
     При выборе вкладки "All" в LEADERBOARD открывается таблица лидеров за всё время
   prerequisites: |
@@ -266,7 +232,7 @@
     Открылась таблица лидеров за всё время
 
 - summary: |
-    Проверка возможности просмотра полной таблицы лидеров
+    Проверка просмотра полной таблицы лидеров
   requirement: |
     При нажатии кнопки "Top list" открывается полная таблица лидеров
   prerequisites: |
@@ -279,7 +245,7 @@
     Открылась полная таблица лидеров
 
 - summary: |
-    Проверка возможности создания нового турнира
+    Проверка создания нового турнира
   requirement: |
     При заполениии формы "Create a new tournament" и нажатии кнопки "Create" создается турнир
   prerequisites: |
@@ -295,7 +261,7 @@
     Создался новый турнир
 
 - summary: |
-    Успешный просмотр собственной статистики и истории битв
+    Просмотр собственной статистики и истории битв
   requirement: |
     При нажатии на кнопку "STATISTICS" можно просматривать статистику
     При нажатии на кнопку "COMPLETED GAMES" можно просматривать краткий список собственных битв
@@ -312,7 +278,7 @@
     При нажатии на кнопку "COMPLETED GAMES" можно просматривать список собственных битв
 
 - summary: |
-    Успешное изменение Nickname в настройках пользователя
+    Изменение Nickname в настройках пользователя
   requirement: |
     При нажатии на кнопку "Settings" можно изменить Nickname в настройках пользователя
   prerequisites: |
@@ -328,7 +294,7 @@
     Высветилось оповещание "Your settings has been changed" и изменения успешно сохранились
 
 - summary: |
-    Успешное изменение Оружия в настройках пользователя
+    Изменение Оружия в настройках пользователя
   requirement: |
     В меню "Settings" можно изменить Оружие
   prerequisites: |
@@ -344,7 +310,7 @@
     Высветилось оповещание "Your settings has been changed" и изменения успешно сохранились
 
 - summary: |
-    Успешное добавление названия клана в настройках пользователя
+    Добавление названия клана в настройках пользователя
   requirement: |
     В меню "Settings" можно добавить название клана
   prerequisites: |
@@ -360,7 +326,7 @@
     Высветилось оповещание "Your settings has been changed" и название клана успешно сохранилось
 
 - summary: |
-    Успешное удаление названия клана в настройках пользователя
+    Удаление названия клана в настройках пользователя
   requirement: |
     В меню "Settings" можно удалить название клана
   prerequisites: |
@@ -378,7 +344,7 @@
     Высветилось оповещание "Your settings has been changed" и название клана удалено
 
 - summary: |
-    Проверка успешного изменения звука в настройках пользователя
+    Изменение звука в настройках пользователя
   requirement: |
     В меню "Settings" можно изменить настройки звука
   prerequisites: |
@@ -396,7 +362,7 @@
     После изменения настроек высветилось оповещение "Your settings has been changed" и изменения успешно сохранились
 
 - summary: |
-    Проверка успешного просмотра задач на сайте
+    Просмотр задач на сайте
   requirement: |
     При нажатии на кнопку "Tasks" можно увидеть список задач, нажав на кнопку "Show" можно просмотреть информацию о задаче
   prerequisites: |
@@ -411,7 +377,7 @@
     Открылось условие задачи
 
 - summary: |
-    Проверка успешного создания новой задачи на сайте
+    Создание новой задачи на сайте
   requirement: |
     При нажатии на кнопку "Tasks" далее "Create new tasks" можно создать новую задачу
   prerequisites: |
@@ -428,7 +394,7 @@
     Задача создана
 
 - summary: |
-    Проверка успешного создания нового пакета задач на сайте
+    Создание нового пакета задач на сайте
   requirement: |
     При нажатии на кнопку "Tasks" далее "Tasks packs" создается свой пакет задач
   prerequisites: |
@@ -459,9 +425,9 @@
     password - K_pdcHQ2yjK7VgF
   steps:
     - нажать кнопку "Sign up"
-    - вводим Nickname - lara373
-    - Вводим email - lara.medeiros373@flounderfantasy.com
-    - Вводим пароль - K_pdcHQ2yjK7VgF
+    - вводим Nickname
+    - Вводим email
+    - Вводим пароль
     - вводим пароль повторно
     - Нажать кнопку "Submit"
   expected-result: |
@@ -482,7 +448,7 @@
     Регистрация не возможна, поля долны быть заполнены
 
 - summary: |
-    Проверка лимита знаков при отправке сообщения в чат
+    Проверка лимита знаков при отправке сообщения в чат с главной
   requirement: |
     При наборе бесконечного сообщения в чат отправлка не возможна
   prerequisites: |
@@ -490,7 +456,7 @@
   test-data: |
     no test-data
   steps:
-    - набрать соббщение из любых знаков размером, например более 500 символов
+    - набрать соббщение из любых знаков размером более 1024
     - нажать кнопку "Send"
   expected-result: |
-    Отправить бесконечное сообщение не возможно. ПОявлется сообщение "Message length cannot exceed 1024 characters."
+    Отправить бесконечное сообщение не возможно. Появлется сообщение "Message length cannot exceed 1024 characters."
