fix: fix testing report

--- a/testing-report.yml
+++ b/testing-report.yml
@@ -1,114 +1,106 @@
 ---
 - summary: |
-    Попробовать простую игру без регистрации
+    Проверка создания игры без регистрации
   status: pass
 
 - summary: |
-    Проверка регистации через GitHub
+    Проверка успешной авторизации через GitHub
   status: pass
 
 - summary: |
-    Проверка авторизации через GitHub
+    Проверка успешной авторизации через Discord
   status: pass
 
 - summary: |
-    Проверка регистации через Discord
+    Проверка успешной регистрации
   status: pass
 
 - summary: |
-    Проверка авторизации через Discord
+    Проверка успешной авторизации
   status: pass
 
 - summary: |
-    Проверка регистации с помощью корректных Nickname и email
+    Проверка создания игры с ботом
   status: pass
 
 - summary: |
-    Проверка авторизации с помощью правильных Nickname и email
+    Проверка отображения игры в списке лобби
   status: pass
 
 - summary: |
-    Проверка создания простой игры против бота
+    Проверка создания игры с другом
   status: pass
 
 - summary: |
-    Успешное создание игры с другим пользователем
+    Проверка просмотра активной игры
   status: pass
 
 - summary: |
-    Успешное создание игры с другом
+    Проверка отправки сообщения в чат с главной
   status: pass
 
 - summary: |
-    Проверить возможнось слежения за ходом игры других игроков
+    Проверка просмотра списка истории завершенных игр
   status: pass
 
 - summary: |
-    Проверка возможности отправки сообщений в чат
+    Проверка просмотра результатов завершенной игры
   status: pass
 
 - summary: |
-    Проверка возможности просмотра списка истории завершенных игр
+    Проверка просмотра таблицы лидеров за неделю
   status: pass
 
 - summary: |
-    Проверка возможности просмотра результатов завершенной игры
+    Проверка просмотра таблицы лидеров за месяц
   status: pass
 
 - summary: |
-    Проверка возможности просмотра таблицы лидеров за неделю
+    Проверка просмотра таблицы лидеров за все время
   status: pass
 
 - summary: |
-    Проверка возможности просмотра таблицы лидеров за месяц
+    Проверка просмотра полной таблицы лидеров
   status: pass
 
 - summary: |
-    Проверка возможности просмотра таблицы лидеров за все время
+    Проверка создания нового турнира
   status: pass
 
 - summary: |
-    Проверка возможности просмотра полной таблицы лидеров
+    Просмотр собственной статистики и истории битв
   status: pass
 
 - summary: |
-    Проверка возможности создания нового турнира
+    Изменение Nickname в настройках пользователя
   status: pass
 
 - summary: |
-    Успешный просмотр собственной статистики и истории битв
+    Изменение Оружия в настройках пользователя
   status: pass
 
 - summary: |
-    Успешное изменение Nickname в настройках пользователя
+    Добавление названия клана в настройках пользователя
   status: pass
 
 - summary: |
-    Успешное изменение Оружия в настройках пользователя
-  status: pass
-
-- summary: |
-    Успешное добавление названия клана в настройках пользователя
-  status: pass
-
-- summary: |
-    Успешное удаление названия клана в настройках пользователя
+    Удаление названия клана в настройках пользователя
   status: fail
 
 - summary: |
-    Проверка успешного изменения звука в настройках пользователя
+    Изменение звука в настройках пользователя
   status: fail
 
 - summary: |
-    Проверка успешного просмотра задач на сайте
+    Просмотр задач на сайте
   status: pass
 
 - summary: |
-    Проверка успешного создания новой задачи на сайте
+    Создание новой задачи на сайте
   status: pass
 
 - summary: |
-    Проверка успешного создания нового пакета задач на сайте
+    Создание нового пакета задач на сайте
   status: pass
 
 # негативные тесты
@@ -122,5 +114,5 @@
   status: pass
 
 - summary: |
-    Проверка лимита знаков при отправке сообщения в чат
+    Проверка лимита знаков при отправке сообщения в чат с главной
   status: pass
